add deployment