@@ -1,8 +1,8 @@
-FROM openjdk:17-alpine
-RUN addgroup -S spring && adduser -S spring -G spring
+FROM openjdk:17.0
+#RUN addgroup -S spring && adduser -S spring -G spring
 RUN mkdir logs
 VOLUME /logs
-RUN apk add tzdata
+#RUN apk add tzdata
 EXPOSE 8080 8443
 
 ENV JAVA_PROFILE dev-release
@@ -10,7 +10,7 @@ ARG DEPENDENCY=target/dependency
 COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
 COPY ${DEPENDENCY}/BOOT-INF/classes /app
-
+#ENV JAVA_OPTS="-server --add-exports java.desktop/sun.font=ALL-UNNAMED"
 ENTRYPOINT ["java",   "-Dspring.profiles.active=${JAVA_PROFILE}",\
             "-cp","app:app/lib/*","cmu.se.poddline.stroke.StrokeApplication"]
 #ADD target/autopair-maincontroller.jar app.jar
